--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Testing
     strategy:
       matrix:
         ghc-ver: ["8.6.5", "8.8.4", "8.10.7", "9.0.2", "9.2.1"]
