--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         ghc-ver: ["8.6.5", "8.8.4", "8.10.7", "9.0.2", "9.2.1"]
       # complete all jobs
       fail-fast: false
-    name: Argo - GHC v${{ matrix.ghc-ver }} - ubuntu-latest
+    name: Argo - GHC v${{ matrix.ghc-ver }} - ubuntu-22.04
     steps:
     - uses: actions/setup-python@v2
       with:
@@ -47,7 +47,7 @@ jobs:
       working-directory: ./python
       # see https://github.com/python-poetry/poetry/issues/4210 for new-installer workaround details below
       run: |
-        poetry config experimental.new-installer false
+        #poetry config experimental.new-installer false
         poetry install
     - name: Typecheck python code
       working-directory: ./python
