--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-22.04 # Testing
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         ghc-ver: ["8.6.5", "8.8.4", "8.10.7", "9.0.2", "9.2.1"]
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.11'
     - uses: abatilo/actions-poetry@v2.1.4
       with:
         poetry-version: 1.1.11
