--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
         ghc-ver: ["8.6.5", "8.8.4", "8.10.7", "9.0.2", "9.2.1"]
       # complete all jobs
       fail-fast: false
-    name: Argo - GHC v${{ matrix.ghc-ver }} - ubuntu-22.04
+    name: Argo - GHC v${{ matrix.ghc-ver }} - ubuntu-latest
     steps:
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.11'
+        python-version: '3.10'
     - uses: abatilo/actions-poetry@v2.1.4
       with:
         poetry-version: 1.1.11
